# takemura-lab

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.sample  .flake8  Dockerfile  pyproject.toml
backend/src/: Dockerfile  main.py  models.py  requirements.txt
backend/src/core/: auth.py
backend/src/cruds/: equipment.py  equipment_history.py  equipment_lack.py  information.py  user.py
backend/src/database/: database.py
backend/src/routers/: auth.py  equipment.py  equipment_history.py  equipment_lack.py  information.py  user.py
backend/src/schemas/: equipment.py  equipment_history.py  equipment_lack.py  information.py  user.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Admin.js  App.css  App.js  Dashboardcontent.js  Dashboardroot.js  Dashboardview.js  EachMemberinAdmin.js  Equipment.js  Equipmentdetailview.js  Equipmentlist.js  Equipmentlistcontent.css  Equipmentlistcontent.js  Equipmentview.js  Equipmentviewswitch.js  Information.js  Informationdetailview.js  Informationlistcontent.js  Informationswitch.js  Lackequipmentlist.js  Loginform.css  Loginform.js  Memberroot.js  Members.js  MembersinAdmin.js  Navigate.js  Tab.js  Totalcost.js  index.js
