[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sena1267 <silc0504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.13"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
