[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sena1267 <silc0504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bcrypt = "^4.0.1"
fastapi = "^0.96.0"
passlib = "^1.7.4"
pydantic = "^1.10.8"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
